Start work on togglegroup button